--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.8",
     "axios": "^0.21.1",
     "chart.js": "^3.3.2",
     "react": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-placeholder-loading": "^0.5.22",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
